--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,30 @@
-alembic==1.7.6
-click==8.0.3
-colorama==0.4.4
-DateTime==4.4
-Flask==2.0.3
-Flask-Login==0.5.0
-Flask-Migrate==3.1.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
-greenlet==1.1.2
-gunicorn==20.1.0
-importlib-metadata==4.11.2
-importlib-resources==5.4.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
-Mako==1.2.0
-MarkupSafe==2.0.1
-numpy==1.22.2
-pandas==1.4.1
-python-dateutil==2.8.2
-pytz==2021.3
-six==1.16.0
-SQLAlchemy==1.4.32
-Werkzeug==2.0.3
-WTForms==3.0.1
-zipp==3.7.0
-zope.interface==5.4.0
+asgiref==3.5.2
+brotlipy==0.7.0
+certifi==2021.5.30
+cffi @ file:///opt/concourse/worker/volumes/live/976f8942-f51d-4f0e-7352-2a10f0820d0e/volume/cffi_1625814703974/work
+chardet @ file:///opt/concourse/worker/volumes/live/7e1102c4-8702-40f2-63d6-f260ce5f85e4/volume/chardet_1607706831384/work
+click==8.1.3
+conda==4.10.3
+conda-package-handling @ file:///opt/concourse/worker/volumes/live/8fb3e065-760b-4a9d-4cd9-aca7fc8baf53/volume/conda-package-handling_1618262145611/work
+cryptography @ file:///opt/concourse/worker/volumes/live/d5dda287-c0b3-4861-7262-fab05baa64dc/volume/cryptography_1616769284011/work
+Django==3.2.13
+Flask==2.1.2
+Flask-Login==0.6.1
+idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
+PySocks @ file:///opt/concourse/worker/volumes/live/112288ac-9cb0-4e73-768b-13baf4ca6419/volume/pysocks_1605305820043/work
+pytz==2022.1
+requests @ file:///tmp/build/80754af9/requests_1608241421344/work
+ruamel-yaml-conda @ file:///opt/concourse/worker/volumes/live/e81cf0fe-611a-498e-6e69-a7320057c1ac/volume/ruamel_yaml_1616016689696/work
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+sqlparse==0.4.2
+tqdm @ file:///tmp/build/80754af9/tqdm_1625563689033/work
+urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
+Werkzeug==2.1.2
+zipp==3.8.0
