--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+bcrypt==3.2.2
 blinker==1.4
+cffi==1.15.0
 click==8.1.3
 dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.2.1
 Flask==2.1.2
+Flask-Bcrypt==1.0.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.1
 Flask-Navigation==0.2.0
@@ -17,6 +20,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.23.0
 pandas==1.4.3
+pycparser==2.21
 python-dateutil==2.8.2
 pytz==2022.1
 six==1.16.0
